@@ -16,8 +16,9 @@
 <li><a href="resultsetbuffersize">Use Result Set Buffer Size</a></li>
 </ul>
 
+<br>
 <a name="localdbconnection"></a>
-<span class="heading2">Connect To The Database Using a Local Connection</span><br><br>
+<span class="heading2">Connect To The Database Using a Local Connection</span><br>
 
 <p>One of the most common mistakes that people make when using SQL Relay is
 running SQL Relay on the same machine as the database, but not using a "local
@@ -31,10 +32,6 @@ the database using a remote connection.  However, if you're running SQL Relay
 on the same machine as the database, then you should configure it to connect to
 the database using a local connection if possible.</p>
 
-<span class="heading3">IBM DB2</span>
-<span class="heading3">Interbase</span>
-<span class="heading3">Lago</span>
-<span class="heading3">Msql</span>
 <span class="heading3">MySQL</span>
 
 <p>MySQL supports local connections over a unix socket.</p>
@@ -45,32 +42,249 @@ configuration file (usually /etc/my.cnf) and add a line like the following to
 the [mysqld] section if it's not already there:</p>
 
 <blockquote>
-socket=/var/lib/mysql/mysql.sock
+<font color="#298a52"><b>socket=</b></font>/var/lib/mysql/mysql.sock
 </blockquote>
 
 <p>Now restart MySQL.</p>
 
-<p>To make sure SQL Relay will connect to MySQL using the local connection,
+<p>To configure SQL Relay to connect to MySQL using the local connection,
 edit the sqlrelay.conf file and make sure that the connectstring for the
 MySQL instance uses the socket parameter, as follows:</p>
 
 <blockquote>
-user=testuser;password=testpassword;db=testdb;socket=/var/lib/mysql/mysql.sock
+<font color="#ff00ff">user=testuser;password=testpassword;db=testdb;socket=/var/lib/mysql/mysql.sock</font>
 </blockquote>
 
 <p>as opposed to:</p>
 
 <blockquote>
-user=testuser;password=testpassword;db=testdb;host=localhost;port=5432
+<font color="#ff00ff">user=testuser;password=testpassword;db=testdb;host=localhost;port=5432</font>
 </blockquote>
 
-<span class="heading3">Oracle</span>
 <span class="heading3">PostgreSQL</span>
+
+<p>PostgreSQL supports local connections over a unix socket.</p>
+
+<p>By default, PostgreSQL is configured to accept local connections.  I'm not
+sure you can even turn it off.  By default, PostgreSQL listens on
+/tmp/.s.PGSQL.5432.  The directory can be overridden by modifying the
+PostgreSQL configuration file (usually /var/lib/pgsql/data/postgresql.conf).
+The following parameters affect which file PostgreSQL listens on and that
+file's properties.  By default these parameters are commented out.  To modify
+the parameters, remove the leading # and set the parameter.  By default, the
+parameters look like this:</p>
+
+<blockquote>
+<pre>
+<font color="#0000ff">#unix_socket_directory = ''</font>
+<font color="#0000ff">#unix_socket_group = ''</font>
+<font color="#0000ff">#unix_socket_permissions = 0777 # octal</font>
+
+<font color="#0000ff">#port = 5432</font>
+</pre>
+</blockquote>
+
+<p>The socket file that PostgreSQL will listen on will be found in /tmp by
+default, or in whatever directory is specified by unix_socket_directory.  The
+file always start with .s.PGSQL. and end with whatever port is specified with
+the port parameter.  Note that the port parameter also determines which inet
+port PostgreSQL will listen on.  By default it will have 777 permissions and
+be owned by whatever user and group the postmaster process is running as.  You
+can override the permissions using the unix_socket_permissions parameter and
+the group using the unix_socket_group parameter.</p>
+
+<p>The postmaster process also takes several command line parameters.  The -k
+parameter overrides the unix_socket_directory parameter and the -p parameter 
+overrides the port parameter.</p>
+
+<p>After you modify postgresql.conf, restart PostgreSQL.</p>
+
+<p>To configure SQL Relay to connect to PostgreSQL using the local connection,
+edit the sqlrelay.conf file and make sure that the connectstring for the
+PostgreSQL instance uses the host and port parameters as follows:</p>
+
+<blockquote>
+<font color="#ff00ff">user=testuser;password=testpassword;host=/tmp;port=5432;</font>
+</blockquote>
+
+<p>as opposed to:</p>
+
+<blockquote>
+<font color="#ff00ff">user=testuser;password=testpassword;host=localhost;port=5432;</font>
+</blockquote>
+
+<p>Ordinarily, the host parameter tells SQL Relay what host to connect to, but
+if it starts with a / then it indicates what directory to look for the socket
+file in.  Likewise, the port parameter ordinarily tells SQL Relay what port to
+connect to, but if host starts with a / then it indicates that SQL Relay should
+look for a file in the directory specifid by the host parameter starting with
+.s.PGSQL. and ending in the port number.</p>
+
+<span class="heading3">mSQL</span>
+
+<p>mSQL supports local connections over a unix socket.</p>
+
+<p>By default, mSQL is usually configured to accept local connections.  To make
+sure mSQL is configuerd to accept local connections, edit the mSQL
+configuration file (usually /usr/local/Hughes/msql.conf) and add a line like
+the following to the [general] section if it's not already there:</p>
+
+<blockquote>
+<font color="#298a52"><b>UNIX_Port =</b></font> %I/msql2.sock
+</blockquote>
+
+<p>The full pathname of the file can be specified, or %I can be used to
+refer to the path specified in the Inst_Dir parameter
+(usually /usr/local/Hughes).</p>
+
+<p>Now restart mSQL.</p>
+
+<p>To configure SQL Relay to connect to mSQL using the local connection,
+edit the sqlrelay.conf file and make sure that the connectstring for the
+mSQL instance doesn't contain a host parameter, as follows:</p>
+
+<blockquote>
+<font color="#ff00ff">db=testdb</font>
+</blockquote>
+
+<p>as opposed to:</p>
+
+<blockquote>
+<font color="#ff00ff">host=localhost;db=testdb</font>
+</blockquote>
+
+<p>Leaving out the host parameter causes SQL Relay to read the msql.conf file
+and connect to whatever unix socket is specified in that file.  It is important
+that msql.conf be readable by whatever user SQL Relay is configured to run
+as.</p>
+
+<span class="heading3">Oracle</span>
+
+<p>Oracle supports local connections over IPC using shared memory.</p>
+
+<p>By default, Oracle isn't usually set up to listen for IPC connections.
+To set up Oracle to listen for IPC connections, edit
+$ORACLE_HOME/network/admin/listener.ora and look for a section like this:</p>
+
+<blockquote>
+<pre>
+LISTENER =
+  (<font color="#298a52"><b>DESCRIPTION_LIST</b></font> =
+    (<font color="#298a52"><b>DESCRIPTION</b></font> =
+      (<font color="#298a52"><b>ADDRESS_LIST</b></font> =
+        (<font color="#298a52"><b>ADDRESS</b></font> = (<font color="#a52829"><b>PROTOCOL</b></font> = <font color="#a52829"><b>TCP</b></font>)(<font color="#a52829"><b>HOST</b></font> = localhost.localdomain)(<font color="#a52829"><b>PORT</b></font> = 1521))
+      )
+    )
+  )
+</pre>
+</blockquote>
+
+<p>Add an additional ADDRESS section as follows:</p>
+
+<blockquote>
+<pre>
+LISTENER =
+  (<font color="#298a52"><b>DESCRIPTION_LIST</b></font> =
+    (<font color="#298a52"><b>DESCRIPTION</b></font> =
+      (<font color="#298a52"><b>ADDRESS_LIST</b></font> =
+        (<font color="#298a52"><b>ADDRESS</b></font> = (<font color="#a52829"><b>PROTOCOL</b></font> = <font color="#008a8c">IPC</font>)(<font color="#a52829"><b>KEY</b></font> = EXTPROC))
+        (<font color="#298a52"><b>ADDRESS</b></font> = (<font color="#a52829"><b>PROTOCOL</b></font> = <font color="#a52829"><b>TCP</b></font>)(<font color="#a52829"><b>HOST</b></font> = localhost.localdomain)(<font color="#a52829"><b>PORT</b></font> = 1521))
+      )
+    )
+  )
+</pre>
+</blockquote>
+
+<p>Now Oracle's listener is configured to listen for both IPC and inet socket
+connections.  Restart Oracle</p>
+
+<p>SQL Relay looks up the ORACLE_SID in the
+$ORACLE_HOME/network/admin/tnsnames.ora file and uses the configuration
+parameters there to connect to the database.  By default, the connection to the
+database is configured to use an inet socket.  To set up an ORACLE_SID to use
+IPC instead, edit $ORACLE_HOME/network/admin/tnsnames.ora and look for a
+section for the ORACLE_SID like this:</p>
+
+<blockquote>
+<pre>
+ORA1 =
+  (<font color="#298a52"><b>DESCRIPTION</b></font> =
+    (<font color="#298a52"><b>ADDRESS</b></font> = (<font color="#a52829"><b>PROTOCOL</b></font> = <font color="#a52829"><b>TCP</b></font>)(<font color="#a52829"><b>HOST</b></font> = localhost.localdomain)(<font color="#a52829"><b>PORT</b></font> = 1521))
+    (<font color="#298a52"><b>CONNECT_DATA</b></font> =
+      (<font color="#a52829"><b>SERVER</b></font> = <font color="#008a8c">DEDICATED</font>)
+      (<font color="#a52829"><b>SERVICE_NAME</b></font> = ora1)
+    )
+  )
+</pre>
+</blockquote>
+
+<p>Modify it as follows:</p>
+
+<blockquote>
+<pre>
+ORA1 =
+  (<font color="#298a52"><b>DESCRIPTION</b></font> =
+    (<font color="#298a52"><b>ADDRESS</b></font> = (<font color="#a52829"><b>PROTOCOL</b></font> = <font color="#008a8c">IPC</font>)(<font color="#a52829"><b>KEY</b></font> = EXTPROC))
+    (<font color="#298a52"><b>CONNECT_DATA</b></font> =
+      (<font color="#a52829"><b>SERVER</b></font> = <font color="#008a8c">DEDICATED</font>)
+      (<font color="#a52829"><b>SERVICE_NAME</b></font> = ora1)
+    )
+  )
+</pre>
+</blockquote>
+
+<p>SQL Relay requires no specific modifications to connect to the database using
+IPC instead of an inet socket.  Just configure the connect string to use an SID
+that uses IPC to connect to the database.  For example:</p>
+
+<blockquote>
+<font color="#ff00ff">user=testuser;password=testpassword;oracle_sid=ora1;</font>
+</blockquote>
+
 <span class="heading3">SQLite</span>
+
+<p>SQLite is different from other databases.  SQL Relay's sqlite connection
+uses the sqlite library to access the database file directly.  Effectively,
+the database connection is always local.</p>
+
+<span class="heading3">IBM DB2</span>
+
+<p>As far as I can tell, DB2 supports local connections over IPC using
+shared memory, semaphores and message queues (though I can't find any
+documentation that specifically says that).</p>
+
+<p>By default, clients connect to DB2 databases using local connections.  In
+fact, to access a remote instance, you have to set up a stub local instance
+which relays to the remote instance and connect to the local instance.</p>
+
+<p>SQL Relay requires no specific modifications to connect to the database.
+Just configure the connect string to use the local database.  For example:</p>
+
+<blockquote>
+<font color="#ff00ff">db=testdb</font>
+</blockquote>
+
 <span class="heading3">Sybase</span>
 
+<p>As far as I can tell, Sybase only supports client connections over inet
+sockets.  If anyone knows differently, send mail to
+<a href="mailto:dmuse@firstworks.com">dmuse@firstworks.com</a>.</p>
+
+<span class="heading3">Lago</span>
+
+<p>As far as I can tell, Lago only supports client connections over inet
+sockets.  If anyone knows differently, send mail to
+<a href="mailto:dmuse@firstworks.com">dmuse@firstworks.com</a>.</p>
+
+<span class="heading3">Interbase/Firebird</span>
+
+<p>As far as I can tell, Interbase/Firebird only supports client connections
+over inet sockets.  If anyone knows differently, send mail to
+<a href="mailto:dmuse@firstworks.com">dmuse@firstworks.com</a>.</p>
+
+<br>
 <a name="unixsocket"></a>
-<span class="heading2">Connect To SQL Relay Using a Unix Socket</span><br><br>
+<span class="heading2">Connect To SQL Relay Using a Unix Socket</span><br>
 
 <p>SQL Relay supports inet and unix sockets.  If you are runing the SQL Relay
 client (your program) and the SQL Relay server on the same machine, make sure
@@ -92,12 +306,12 @@ a new sqlrconnection, make sure you tell it to use the unix socket:</p>
 
 <blockquote>
 sqlrconnection	*con=new sqlrconnection("localhost",8006,"/tmp/mysqltest.socket","user","password",0,1);
-<blockquote>
+</blockquote>
 
 <p>as opposed to:</p>
 
 <blockquote>
-sqlrconnection	*con=new sqlrconnection("localhost",8006,NULL,"user","password",0,1);
+sqlrconnection  *con=<font color="#a52829"><b>new</b></font> sqlrconnection(<font color="#ff00ff">&quot;localhost&quot;</font>,<font color="#ff00ff">8006</font>,<font color="#ff00ff">NULL</font>,<font color="#ff00ff">&quot;user&quot;</font>,<font color="#ff00ff">&quot;password&quot;</font>,<font color="#ff00ff">0</font>,<font color="#ff00ff">1</font>);
 </blockquote>
 
 <p>(for non-C++ api's the syntax is similar)</p>
@@ -112,8 +326,9 @@ unix socket file name wrong and it was trying it, failing, then falling back to
 host/port.</p>
 
 
+<br>
 <a name="handoff"></a>
-<span class="heading2">Use File Descriptor Passing</span><br><br>
+<span class="heading2">Use File Descriptor Passing</span><br>
 
 <p>SQL Relay has a listener process that waits for incoming clients, then hands
 them off to a seperate process that is already logged into the database when one
@@ -126,18 +341,19 @@ system resources.</p>
 sure the handoff attribute is set to "pass":
 
 <blockquote>
-<instance id="mysqltest" port="8006" ... handoff="pass" ... >
+<font color="#008a8c">&lt;</font><font color="#008a8c">instance</font><font color="#008a8c"> </font><font color="#298a52"><b>id</b></font>=<font color="#ff00ff">&quot;mysqltest&quot;</font><font color="#008a8c"> </font><font color="#298a52"><b>port</b></font>=<font color="#ff00ff">&quot;8006&quot;</font><font color="#008a8c"> ... </font><font color="#298a52"><b>handoff</b></font>=<font color="#ff00ff">&quot;pass&quot;</font><font color="#008a8c"> ... &gt;</font>
 </blockquote>
 
 <p>as opposed to:</p>
 
 <blockquote>
-<instance id="mysqltest" port="8006" ... handoff="reconnect" ... >
+<font color="#008a8c">&lt;</font><font color="#008a8c">instance</font><font color="#008a8c"> </font><font color="#298a52"><b>id</b></font>=<font color="#ff00ff">&quot;mysqltest&quot;</font><font color="#008a8c"> </font><font color="#298a52"><b>port</b></font>=<font color="#ff00ff">&quot;8006&quot;</font><font color="#008a8c"> ... </font><font color="#298a52"><b>handoff</b></font>=<font color="#ff00ff">&quot;reconnect&quot;</font><font color="#008a8c"> ... &gt;</font>
 </blockquote>
 
 
+<br>
 <a name="systemparameters"></a>
-<span class="heading2">Tweak Various System Parameters</span><br><br>
+<span class="heading2">Tweak Various System Parameters</span><br>
 
 <p>Certain system parameters can be tuned to get better performance out of
 SQL Relay.</p>
@@ -202,8 +418,9 @@ boot time.</p>
 operating systems.</p>
 
 
+<br>
 <a name="dontgetcolumninfo"></a>
-<span class="heading2">Don't Get Unnecessary Column Info</span><br><br>
+<span class="heading2">Don't Get Unnecessary Column Info</span><br>
 
 <p>If you run select queries but don't need to know the names/types/sizes of
 the columns, rather you can just refer to them by number, then you can call
@@ -212,8 +429,9 @@ transmitted from the SQL Relay server to the client.  This is really useful for
 speeding up 1 column queries like "select count(*) from mytable".</p>
 
 
+<br>
 <a name="resultsetbuffersize"></a>
-<span class="heading2">Use Result Set Buffer Size</span><br><br>
+<span class="heading2">Use Result Set Buffer Size</span><br>
 
 <p>By default, SQL Relay fetches the entire result set of a query into memory.
 SQL Relay was originally written for use with web-based apps, and most web
